--- a/HAProxy/Image/haproxy.cfg
+++ b/HAProxy/Image/haproxy.cfg
@@ -1,7 +1,7 @@
 # Configure HAProxy to listen on port 8080
 frontend http_front
    bind *:8080
-   stats uri /haproxy?stats
+   stats uri  /haproxy?stats
    default_backend http_back
 
 # Configure HAProxy to route requests to swarm nodes on port 80
@@ -9,3 +9,12 @@ backend http_back
    balance roundrobin
    server node1 192.168.0.33:80 check
    server node2 192.168.0.25:80 check
+   
+listen stats # Define a listen section called "stats"
+  bind :9000 # Listen on localhost:9000
+  mode http
+  stats enable  # Enable stats page
+  stats hide-version  # Hide HAProxy version
+  stats realm Haproxy\ Statistics  # Title text for popup window
+  stats uri /haproxy_stats  # Stats URI
+  stats auth admin:1234  # Authentication credentials
