--- a/Sonar/docker-compose.yml
+++ b/Sonar/docker-compose.yml
@@ -3,6 +3,7 @@ version: "2"
 services:
   sonarqube:
     image: sonarqube
+    restart: always
     ports:
       - "9000:9000"
     networks:
@@ -17,6 +18,7 @@ services:
 
   db:
     image: postgres
+    restart: always
     networks:
       - sonarnet
     environment:
